--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "suggestion"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 authors = ["Ken Matsui <26405363+ken-matsui@users.noreply.github.com>"]
-description = "Provides suggestion traits for all collection types in the standard library"
+description = "A minimal library for similar name suggestions to provide helps like \"Did you mean?\""
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/ken-matsui/suggestion/"
