--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,24 @@
 [package]
-name = "suggestion"
-version = "0.1.3"
+name = "suggestion-cli"
+version = "0.1.0"
 edition = "2021"
 authors = ["Ken Matsui <26405363+ken-matsui@users.noreply.github.com>"]
-description = "A minimal library for similar name suggestions to provide helps like \"Did you mean?\""
+description = "A CLI tool for similar name suggestions to provide helps like \"Did you mean?\""
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/ken-matsui/suggestion/"
 homepage = "https://github.com/ken-matsui/suggestion#readme"
-documentation = "https://docs.rs/suggestion"
+documentation = "https://docs.rs/suggest"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[workspace]
+members = ["suggestion"]
 
 [dependencies]
-lev_distance = "0.1.1"
+clap = { version = "3.0.13", features = ["derive"] }
+suggestion = { path = "suggestion", version = "0.1.3" }
+
+[[bin]]
+name = "suggest"
+path = "src/main.rs"
