--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,18 @@
 [package]
-name = "suggestion-cli"
-version = "0.3.1"
+name = "suggestion"
+version = "0.3.2"
 edition = "2021"
 authors = ["Ken Matsui <26405363+ken-matsui@users.noreply.github.com>"]
-description = "A CLI tool for similar name suggestions to provide helps like \"Did you mean?\""
+description = "A minimal library & CLI tool to provide similar name suggestions like \"Did you mean?\""
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/ken-matsui/suggestion/"
 homepage = "https://github.com/ken-matsui/suggestion#readme"
-documentation = "https://docs.rs/suggestion-cli"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[workspace]
-members = ["suggestion"]
+documentation = "https://docs.rs/suggestion"
 
 [dependencies]
 clap = { version = "3.0.13", features = ["derive"] }
-suggestion = { path = "suggestion", version = "0.3.0" }
+lev_distance = "0.1.1"
 
 [[bin]]
 name = "suggest"
