--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "suggestion"
-version = "0.3.2"
+version = "0.3.3"
 edition = "2021"
 authors = ["Ken Matsui <26405363+ken-matsui@users.noreply.github.com>"]
 description = "A minimal library & CLI tool to provide similar name suggestions like \"Did you mean?\""
 license = "MIT"
 readme = "README.md"
-repository = "https://github.com/ken-matsui/suggestion/"
-homepage = "https://github.com/ken-matsui/suggestion#readme"
+repository = "https://github.com/ken-matsui/suggest/"
+homepage = "https://github.com/ken-matsui/suggest#readme"
 documentation = "https://docs.rs/suggestion"
 
 [dependencies]
