--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -54,11 +54,9 @@ jobs:
           args: --all-targets --all-features -- -D clippy::all -D warnings
 
   test:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
-      - name: Build
-        run: cargo build --verbose
       - name: Run tests
         run: cargo test --verbose
